# online-cinema-fastapi

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.MD  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
commands/: deploy.sh  run_migration.sh  run_web_server_dev.sh
configs/nginx/: nginx.conf
docker/nginx/: .env.sample
src/: create_initial_admin.py  main.py
src/celery_service/: celery_config.py
src/celery_service/tasks/: tokens.py
src/config/: __init__.py  dependencies.py  settings.py
src/database/: __init__.py  bootstrap.py  session_postgresql.py  sync_session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 1b57869eec8e_added_movie_tables.py  22efc6e4da0e_init_db_tables.py  39c258bdc22e_updated_movie_relationships_2.py  4da125030bc4_updated_certification_model.py  6fa973be71cb_init_account_tables.py  e72a38da35f6_updated_movie_relationships.py  fb1c96ded00a_init.py
src/database/models/: accounts.py  movies.py  profiles.py
src/database/utils/: __init__.py  alchemy_helpers.py
src/database/validators/: accounts.py
src/exceptions/: __init__.py
src/notifications/: emails.py  interfaces.py
src/notifications/templates/: activation_complete.html  activation_request.html  comment_like.html  comment_reply.html  password_reset_complete.html  password_reset_request.html
src/routes/: __init__.py  accounts.py  movies.py  profiles.py
src/routes/movie_industry/: __init__.py  directors.py  genres.py  stars.py
src/schemas/: __init__.py  accounts.py  movies.py  profiles.py
src/schemas/examples/: movies.py
src/security/: auth.py  http.py  passwords.py  permissions.py  token_manager.py
src/services/: movies.py
src/services/celery_service/: celery_config.py
src/storages/: s3.py
src/validation/: profile.py
