[tool.poetry]
package-mode = false
[tool.fastapi]
entrypoint = "src.main:app"
[project]
name = "online-cinema-fastapi"
version = "0.1.0"
description = "Online cinema back-end"
authors = [
    {name = "Andrii Yarotskiy",email = "andriiyarotskiy@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "aiosmtplib (>=5.1.0,<6.0.0)",
    "greenlet (>=3.4.0,<4.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)"
]
[tool.black]
target-version = ["py311"]
